hermit-keys/src/RenterContent.css
h1 {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 24px;
  font-style: normal;
  font-variant: normal;
  font-weight: 700;
  line-height: 26.4px;
}

h3 {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 700;
  line-height: 15.4px;
}

p {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 20px;
}

blockquote {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 21px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 30px;
}

pre {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 13px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 18.5714px;
}

.renter-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 20px;
}

.income-container {
  padding: 20px;
  border: 2px solid #ddd;
  flex-direction: column;
  text-align: center;
  border-radius: 8px;
  max-width: 500px;
  margin: 0 auto;
}

.text-container {
  width: 100%;
  text-align: center;
}

.input-container {
  display: flex;
  flex-direction: row;
}

.textbox {
  padding: 10px;
  border: 1px solid #888;
  border-radius: 4px;
  font-size: 16px;
  width: 100%;
  margin-bottom: 15px;
  align-self: center;
}

.submit-button {
  padding: 10px 20px;
  background-color: #34a6fc;
  color: white;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  align-self: center;
}

.submit-button:hover {
  background-color: #2d8fe6;
}
.combined-container {
  align-items: center;
  flex-direction: column;
  width: 20;
}

.user-container {
  flex-direction: row;
}

